manifests/001-namespace.yaml
# DEPLOY_NAMESPACE = fetcherr-test

apiVersion: v1
kind: Namespace
metadata:
  name: dsb-test
